--- a/electron_buildsize/package.json
+++ b/electron_buildsize/package.json
@@ -1,16 +1,20 @@
 {
   "name": "electron_buildsize",
+  "productName": "electron_buildsize",
   "version": "1.0.0",
   "description": "electron build size",
-  "main": "index.js",
+  "main": "./js/index.js",
   "scripts": {
     "start": "electron-forge start",
-    "build_electronscript": "tsc index.ts preload.ts",
+    "build_webpack_production": "webpack --mode production",
+    "build_webpack_development": "webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
-  "author": "i",
+  "author": {
+    "name": "i"
+  },
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.57",
@@ -18,6 +22,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.57",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
     "@electron-forge/maker-zip": "^6.0.0-beta.57",
+    "@types/node": "^14.17.4",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "electron": "^13.1.4",
@@ -25,39 +30,14 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.42.0",
+    "webpack-cli": "^4.7.2"
   },
   "resolutions": {
     "trim-newlines": "^4.0.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
-  },
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "electron_buildsize"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
   }
 }
