Close #17, webpackでts-loaderを使う,spectron で e2e テスト

--- a/electron_buildsize/package.json
+++ b/electron_buildsize/package.json
@@ -8,7 +8,7 @@
     "start": "electron-forge start",
     "build_webpack_production": "webpack --mode production",
     "build_webpack_development": "webpack --mode development",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=test jest",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
@@ -26,6 +26,7 @@
     "@types/node": "^14.17.4",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
+    "cross-env": "^7.0.3",
     "electron": "^13.1.4",
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
@@ -33,7 +34,9 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "spectron": "^15.0.0",
+    "terser-webpack-plugin": "^5.1.4",
     "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5",
     "webpack": "^5.42.0",
